--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,7 @@
 	display:none;
 }
 #af{
-	margin-top: 55px;
+	margin-top: 60px;
 	position:absolute;
 	margin-left:0px;
 	text-align:left;
@@ -36,20 +36,20 @@
 }
 
 .topnav{
+	line-height: 60px;
 	overflow: hidden;
-	width: 100%;
 	background-color: black;
 	color: white;
+	width: 100%;
 	height: 60px;
+	
 }
 .topnav a {
 	display: block;
 	float: left;
 	color: white; 
-	padding: 1.16%;
 	text-decoration: none;
 	font-size: 1.0625em;
-	height: 30px;
 }
 p {
 	text-align: justify;
@@ -68,6 +68,7 @@ section {
 	text-align:center;
 	padding: 3.125em;
 	background: #303030;
+
 }
 article{
 	text-align:left;
@@ -78,10 +79,24 @@ article{
 	margin: auto;
 	margin-bottom: 20px;
 }
-.imgindex{
+
+.div-portifolio{
+	text-align:left;
+	max-width:1000px;
+	background: white;
+	padding: 40px;
+	border-radius: 5px;
+	margin: auto;
+	margin-bottom: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	
+}
+.div-portifolio a .imgindex{
 	width: 20em;
 	height: 10em;
 	max-width: 100%;
+	min-width: 150px;
 	float: center;
 }
 #gilmore{
@@ -124,5 +139,8 @@ article{
 	}
 }
 footer{
-	margin: 10px;
+	color: #eee;
+	background-color: black;
+	height: 60px;
+	line-height: 60px;
 }	
